fix issues with alignment on headers, other small misc changes

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,6 @@
 
 html {
   display: flex;
-  align-items: center;
   justify-content: center;
   height: 100svh;
   background: var(--background-color);
@@ -51,7 +50,7 @@ body {
   border-radius: 6px;
   box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.5);
   object-fit: cover;
-  margin-right: 2em;
+  margin-right: 3em;
 }
 
 #carouselImage:hover {
@@ -88,18 +87,19 @@ body {
   color: var(--accent-color);
   font-size: 1.6em;
   font-weight: 600;
-  text-align: center;
   transition: color 0.2s ease-out;
+	width: 200px;
 }
 
 #links {
   display: grid;
   grid-row-gap: 0.5em;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 1fr;
 }
 
 ul {
   list-style-type: none;
+  padding-left: 1em;
 }
 
 a {
